--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,32 +8,11 @@
 </head>
 
 <body>
-  <header class="py-3 drop-shadow-md main-gradient">
-    <div class="flex flex-row items-center justify-between w-4/5 mx-auto ">
-      <div id="logo-name" class="flex items-center">
-        <img src="/public/images/ferris.jpg" alt="Ferris" class="box-border rounded-full w-14 h-14">
-        <h1 class="ml-5 text-2xl font-bold text-white">Website name</h1>
-      </div>
-      <nav class="flex justify-end w-1/2 text-white ">
-        <a href="#" class="mr-6 underline">Accueil</a>
-        <button id="showLoginModal" class="mr-6 hover:underline ">S'identifier</button>
-        <button id="showRegisterModal" class="hover:underline">Créer un compte</button>
-      </nav>
-    </div>
-  </header>
-
-  <div class="flex flex-col items-center justify-center w-full">
-    <a href="/2"
-      class="px-4 py-2 mt-2 text-white rounded-md w-fit main-gradient main-gradient-hover">Switch to
-      logged in</a>
-    <p class="w-1/4 text-center">Ce bouton est temporaire et sert à montrer ce qu'il se passera lorsque l'utilisateur
-      sera
-      authentifié.</p>
-  </div>
+  <%- include("../components/header.ejs") %>
 
   <div class="flex items-center justify-between w-4/5 pt-12 mx-auto">
-    <button id="showIncidentModal" type="button"
-      class="text-white main-gradient main-gradient-hover font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 focus:outline-none">Signaler
+    <button  type="button"
+      class="text-white main-gradient main-gradient-hover font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 focus:outline-none <%= loggedIn ? 'showIncidentModal' : 'showLoginModal' %>">Signaler
       un incident</button>
 
     <input type="search" name="Search" placeholder="Recherche"
@@ -52,149 +31,28 @@
         </tr>
       </thead>
       <tbody class="divide-y divide-gray-200 ">
-        <!-- Repeat this block for each row -->
-        <tr class="hover:bg-gray-100 ">
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">Accident
-            circulation</td>
-          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap ">Boulevard General Wahis 182
-          </td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">John Doe</td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">30/09/2023</td>
-          <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
-            <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
-          </td>
-        </tr>
-        <!-- Repeat the block above for each row -->
-
-        <tr class="hover:bg-gray-100 ">
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">Chute d'Objet en
-            Zone Publique</td>
-          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap ">Boulevard General Wahis 182
-          </td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">John Doe</td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">30/09/2023</td>
-          <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
-            <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
-          </td>
-        </tr>
-
-        <tr class="hover:bg-gray-100 ">
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">Incendie</td>
-          <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap ">Boulevard General Wahis 182
-          </td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">John Doe</td>
-          <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap ">30/09/2023</td>
-          <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
-            <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
-          </td>
-        </tr>
-
-
-      </tbody>
+        <% for(var i=0; i < incidents.length; i++) { %>
+          <tr class="hover:bg-gray-100 ">
+            <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].title %></td>
+            <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap "><%= incidents[i].address %></td>
+            <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].user.fullname %></td>
+            <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].date %></td>
+            <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
+              <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
+            </td>
+          </tr>
+        <% } %>
+        </tbody>
     </table>
   </div>
 
-  <div id="date" class="absolute -translate-x-1/2 bottom-10 left-1/2">
-  </div>
+  <div id="date" class="absolute -translate-x-1/2 bottom-10 left-1/2"></div>
 
   <!-- MODALS-->
-  <!-- Login modal-->
-  <dialog id="loginModal"
-    class="p-4 bg-white rounded-lg shadow-[0_0_15px_0_rgba(0,0,0,0.1)] backdrop:backdrop-blur-sm backdrop:bg-transparent">
-    <!-- L'interieur du modal se trouve ci-dessous -->
-    <nav class="flex flex-row items-center justify-end">
-      <!-- SVG d'une croix servant de bouton close -->
-      <button id="closeLoginModal" type="button"
-        class="flex items-center justify-center w-8 h-8 text-sm text-gray-400 rounded-lg hover:bg-gray-200 hover:text-gray-900 ">
-        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-        </svg>
-      </button>
-
-    </nav>
-
-    <form action="" class="flex flex-col">
-      <div class="p-6 bg-white rounded-md w-96">
-        <h1 class="text-3xl font-semibold text-center">S'identifier</h1>
-        <hr class="mt-3">
-        <div class="mt-3">
-          <label for="username" class="block mb-2 text-base">Nom d'utilisateur</label>
-          <input type="text" id="username" autofocus
-            class="w-full px-2 py-1 text-base bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
-            placeholder="Entrer votre nom d'utilisateur..." />
-        </div>
-        <div class="mt-3">
-          <label for="password" class="block mb-2 text-base">Mot de passe</label>
-          <input type="password" id="password"
-            class="w-full px-2 py-1 text-base bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
-            placeholder="Entrer votre mot de passe..." />
-        </div>
-        <div class="mt-5">
-          <button type="submit"
-            class="w-full py-1 font-semibold text-white rounded-md main-gradient hover:bg-transparent main-gradient-hover"><i
-              class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;S'identifier</button>
-        </div>
-      </div>
-
-    </form>
-    <!-- L'interieur du modal se trouve ci-dessus-->
-  </dialog>
-
-  <!-- Register modal -->
-  <dialog id="registerModal"
-    class="p-4 bg-white rounded-lg shadow-[0_0_15px_0_rgba(0,0,0,0.1)] backdrop:backdrop-blur-sm backdrop:bg-transparent">
-    <!-- L'interieur du modal se trouve ci-dessous -->
-    <nav class="flex flex-row items-center justify-end">
-      <!-- SVG d'une croix servant de bouton close -->
-      <button id="closeRegisterModal" type="button"
-        class="flex items-center justify-center w-8 h-8 text-sm text-gray-400 rounded-lg hover:bg-gray-200 hover:text-gray-900 ">
-        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-        </svg>
-      </button>
-
-    </nav>
-
-    <form action="" class="flex flex-col">
-      <div class="p-6 bg-white rounded-md w-96">
-        <h1 class="block text-3xl font-semibold text-center"><i class="fa-solid fa-user"></i>Créer un compte</h1>
-        <hr class="mt-3">
-        <div class="mt-3">
-          <label for="username" class="block mb-2 text-base">Nom d'utilisateur</label>
-          <input type="text" id="username"
-            class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
-            placeholder="Entrer votre nom d'utilisateur..." />
-        </div>
-        <div class="mt-3">
-          <label for="password" class="block mb-2 text-base">Mot de passe</label>
-          <input type="password" id="password"
-            class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
-            placeholder="Entrer votre mot de passe..." />
-        </div>
-        <div class="mt-3">
-          <label for="name" class="block mb-2 text-base">Nom complet</label>
-          <input type="text" id="name"
-            class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
-            placeholder="Entrer votre nom..." />
-        </div>
-        <div class="mt-3">
-          <label for="email" class="block mb-2 text-base">Email</label>
-          <input type="text" id="email"
-            class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
-            placeholder="Entrer votre email..." />
-        </div>
-        <div class="mt-5">
-          <button type="submit"
-            class="w-full py-1 font-semibold text-white rounded-md main-gradient hover:bg-transparent main-gradient-hover"><i
-              class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;Créer un compte</button>
-        </div>
-      </div>
-    </form>
-    <!-- L'interieur du modal se trouve ci-dessus-->
-  </dialog>
-
+  <%- include("../components/loginModal.ejs") %>
+  <%- include("../components/registerModal.ejs") %>
+  <%- include("../components/incidentModal.ejs") %>
+  
 
   <script src="/public/js/index.js"></script>
 </body>
