--- a/views/components/loginModal.ejs
+++ b/views/components/loginModal.ejs
@@ -13,19 +13,19 @@
 
   </nav>
 
-  <form action="" class="flex flex-col">
+  <form action="/login" method="POST" class="flex flex-col">
     <div class="p-6 bg-white rounded-md w-96">
       <h1 class="text-3xl font-semibold text-center">S'identifier</h1>
       <hr class="mt-3">
       <div class="mt-3">
         <label for="username" class="block mb-2 text-base">Nom d'utilisateur</label>
-        <input type="text" id="username" autofocus
+        <input type="text" id="username" name="username" autofocus
           class="w-full px-2 py-1 text-base bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
           placeholder="Entrer votre nom d'utilisateur..." />
       </div>
       <div class="mt-3">
         <label for="password" class="block mb-2 text-base">Mot de passe</label>
-        <input type="password" id="password"
+        <input type="password" id="password" name="password"
           class="w-full px-2 py-1 text-base bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
           placeholder="Entrer votre mot de passe..." />
       </div>
