--- a/views/components/registerModal.ejs
+++ b/views/components/registerModal.ejs
@@ -13,31 +13,31 @@
 
   </nav>
 
-  <form action="" class="flex flex-col">
+  <form action="/signup" method="POST" class="flex flex-col">
     <div class="p-6 bg-white rounded-md w-96">
       <h1 class="block text-3xl font-semibold text-center"><i class="fa-solid fa-user"></i>Créer un compte</h1>
       <hr class="mt-3">
       <div class="mt-3">
         <label for="username" class="block mb-2 text-base">Nom d'utilisateur</label>
-        <input type="text" id="username"
+        <input type="text" id="username" name="username"
           class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
           placeholder="Entrer votre nom d'utilisateur..." />
       </div>
       <div class="mt-3">
         <label for="password" class="block mb-2 text-base">Mot de passe</label>
-        <input type="password" id="password"
+        <input type="password" id="password" name="password"
           class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
           placeholder="Entrer votre mot de passe..." />
       </div>
       <div class="mt-3">
         <label for="name" class="block mb-2 text-base">Nom complet</label>
-        <input type="text" id="name"
+        <input type="text" id="name" name="name"
           class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
           placeholder="Entrer votre nom..." />
       </div>
       <div class="mt-3">
         <label for="email" class="block mb-2 text-base">Email</label>
-        <input type="text" id="email"
+        <input type="text" id="email" name="email"
           class="w-full px-2 py-1 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400"
           placeholder="Entrer votre email..." />
       </div>
