ajout des incidents sur la page avec la db

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -35,7 +35,7 @@
           <tr class="hover:bg-gray-100 ">
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].title %></td>
             <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap "><%= incidents[i].address %></td>
-            <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].user.fullname %></td>
+            <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].name %></td>
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].date %></td>
             <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
               <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
