--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -36,7 +36,7 @@
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].title %></td>
             <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap "><%= incidents[i].address %></td>
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].name %></td>
-            <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].date %></td>
+            <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].date.toLocaleDateString("fr-FR") %></td>
             <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
               <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
             </td>
