--- a/views/components/registerModal.ejs
+++ b/views/components/registerModal.ejs
@@ -46,6 +46,11 @@
           class="w-full py-1 font-semibold text-white rounded-md main-gradient hover:bg-transparent main-gradient-hover"><i
             class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;Créer un compte</button>
       </div>
+      <div id="error-message" class="mt-3 text-red-500">
+        <% if (error) { %>
+        <p> <%= error %></p>
+        <% } %>
+      </div>
     </div>
   </form>
   <!-- L'interieur du modal se trouve ci-dessus-->
