--- a/views/components/registerModal.ejs
+++ b/views/components/registerModal.ejs
@@ -46,9 +46,9 @@
           class="w-full py-1 font-semibold text-white rounded-md main-gradient hover:bg-transparent main-gradient-hover"><i
             class="fa-solid fa-right-to-bracket"></i>&nbsp;&nbsp;Créer un compte</button>
       </div>
-      <div id="error-message" class="mt-3 text-red-500">
+      <div id="error-message" class="p-4 mt-4">
         <% if (error) { %>
-        <p> <%= error %></p>
+          <p class="p-3 text-lg font-bold text-center text-red-500 rounded-md"> <%= error %> </p>
         <% } %>
       </div>
     </div>
