--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,10 @@
 <body>
   <%- include("../components/header.ejs") %>
 
+  <div id="error-message">
+
+  </div>
+
   <div class="flex items-center justify-between w-4/5 pt-12 mx-auto">
     <button  type="button"
       class="text-white main-gradient main-gradient-hover font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 focus:outline-none <%= loggedIn ? 'showIncidentModal' : 'showLoginModal' %>">Signaler
@@ -54,6 +58,12 @@
   <%- include("../components/incidentModal.ejs") %>
   
   <script src="/public/js/index.js"></script>
+  <script> 
+    let error = "<%= error %>";
+    if (error) {
+      alert("Erreur: " + error);
+    }
+  </script>
 </body>
 
 </html>
