--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -34,15 +34,18 @@
         <% for(var i=0; i < incidents.length; i++) { %>
           <tr class="hover:bg-gray-100 ">
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].title %></td>
-            <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap "><%= incidents[i].address %></td>
+            <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap"><%= incidents[i].address %></td>
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].name %></td>
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].date.toLocaleDateString("fr-FR") %></td>
             <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
-              <a class="text-blue-500 hover:text-blue-700" href="#">Plus d'informations</a>
+              <button onclick="showDescription('<%= i %>')" class="text-blue-500 hover:text-blue-700">plus d'informations</button>
             </td>
           </tr>
+          <tr id="<%= i %>" class="hidden">
+            <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap"><%= incidents[i].description %></td>
+          </tr>
         <% } %>
-        </tbody>
+      </tbody>
     </table>
   </div>
 
