Display error done

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -59,7 +59,7 @@
   
   <script src="/public/js/index.js"></script>
   <script> 
-    let error = "<%= error %>";
+    let error = "<%- error %>";
     if (error) {
       alert("Erreur: " + error);
     }
