--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -2,7 +2,7 @@
   <div class="flex flex-row items-center justify-between w-4/5 mx-auto ">
     <div id="logo-name" class="flex items-center">
       <img src="/public/images/ferris.jpg" alt="Ferris" class="box-border rounded-full w-14 h-14">
-      <h1 class="ml-5 text-2xl font-bold text-white">Website name</h1>
+      <h1 class="ml-5 text-2xl font-bold text-white">Louvain-cident</h1>
     </div>
     <nav class="flex justify-end w-1/2 text-white ">
       <a href="#" class="mr-6 underline">Accueil</a>
