fix maxlength form incident

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,7 +42,7 @@
             </td>
           </tr>
           <tr id="<%= i %>" class="hidden">
-            <td class="px-6 py-4 text-sm text-gray-800 whitespace-nowrap"><%= incidents[i].description %></td>
+            <td colspan="5" class="px-6 py-4 text-sm text-gray-800 text-justify"><%= incidents[i].description %></td>
           </tr>
         <% } %>
       </tbody>
