fix de la ligne description du tableau

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,6 +14,7 @@
     <button  type="button"
       class="text-white main-gradient main-gradient-hover font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 focus:outline-none <%= loggedIn ? 'showIncidentModal' : 'showLoginModal' %>">Signaler
       un incident</button>
+    <div id="date" class="absolute -translate-x-1/2 left-1/2"></div>
 
     <input type="search" name="Search" placeholder="Recherche"
       class="block w-1/5 py-2 pl-3 leading-normal text-gray-900 border-0 rounded-md h-fit ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-red-700">
@@ -38,7 +39,7 @@
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].name %></td>
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].date.toLocaleDateString("fr-FR") %></td>
             <td class="px-6 py-4 text-sm font-medium text-right whitespace-nowrap">
-              <button onclick="showDescription('<%= i %>')" class="text-blue-500 hover:text-blue-700">plus d'informations</button>
+              <button id="hideShowDescriptionBtn<%= i %>" onclick="showDescription('<%= i %>')" class="text-blue-500 hover:text-blue-700">plus d'informations</button>
             </td>
           </tr>
           <tr id="<%= i %>" class="hidden">
@@ -48,8 +49,6 @@
       </tbody>
     </table>
   </div>
-
-  <div id="date" class="absolute -translate-x-1/2 bottom-10 left-1/2"></div>
 
   <!-- MODALS-->
   <%- include("../components/loginModal.ejs") %>
