--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,7 +22,7 @@
   </div>
 
   <div class="flex justify-center pt-4 overflow-x-auto">
-    <table class="w-4/5 divide-y divide-gray-200 ">
+    <table class="w-4/5 divide-y divide-gray-200">
       <thead>
         <tr>
           <th scope="col" class="px-6 py-3 text-xs font-medium text-left text-gray-500 uppercase">Titre</th>
@@ -31,7 +31,7 @@
           <th scope="col" class="px-6 py-3 text-xs font-medium text-left text-gray-500 uppercase">Date</th>
         </tr>
       </thead>
-      <tbody class="divide-y divide-gray-200 ">
+      <tbody class="divide-y divide-gray-200">
         <% for(var i=0; i < incidents.length; i++) { %>
           <tr class="hover:bg-gray-100 ">
             <td class="px-6 py-4 text-sm font-medium text-gray-800 whitespace-nowrap "><%= incidents[i].title %></td>
@@ -43,7 +43,7 @@
             </td>
           </tr>
           <tr id="<%= i %>" class="hidden">
-            <td colspan="5" class="px-6 py-4 text-sm text-gray-800 text-justify"><%= incidents[i].description %></td>
+            <td colspan="5" class="px-6 py-4 text-sm text-gray-800 text-justify break-all"><%= incidents[i].description %></td>
           </tr>
         <% } %>
       </tbody>
