modifs placeholders forms

--- a/views/components/incidentModal.ejs
+++ b/views/components/incidentModal.ejs
@@ -21,16 +21,16 @@
     <form class="flex flex-col justify-center" method="post" action="/incidents/create">
       <!-- titre -->
       <label for="title" class="mb-1">Titre</label>
-      <input type="text" id="title" name="title" placeholder="soyez bref" maxlength="35" required
+      <input type="text" id="title" name="title" placeholder="Soyez bref" maxlength="35" required
         class="px-2 py-1 mb-4 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400">
       <!-- description -->
       <label for="description" class="mb-1">Description</label>
       <textarea id="description" name="description" rows="8" cols="46" maxlength="400"
-        placeholder="décrivez l'incident" required
+        placeholder="Décrivez l'incident" required
         class="px-2 py-1 mb-4 bg-gray-100 border-2 border-gray-100 rounded-lg resize-none focus:outline-none focus:ring-0 focus:border-gray-400"></textarea>
       <!-- adresse -->
       <label class="mb-1" for="address">Adresse</label>
-      <input type="text" id="address" name="address" placeholder="exemple: 21, Rue des Wallons" maxlength="50" required
+      <input type="text" id="address" name="address" placeholder="Exemple: 21, Rue des Wallons" maxlength="50" required
         class="px-2 py-1 mb-4 bg-gray-100 border-2 border-gray-100 rounded-lg focus:outline-none focus:ring-0 focus:border-gray-400">
 
       <input type="submit" value="Signaler"
