--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -5,7 +5,7 @@
       <h1 class="ml-5 text-2xl font-bold text-white">Louvain-cident</h1>
     </div>
     <nav class="flex justify-end w-1/2 text-white ">
-      <a href="#" class="mr-6 underline">Accueil</a>
+      <a href="/" class="mr-6 underline">Accueil</a>
       <% if (!loggedIn){ %>
         <button class="mr-6 hover:underline showLoginModal">S'identifier</button>
         <button id="showRegisterModal" class="hover:underline">Créer un compte</button>
