--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/public/css/output.css" rel="stylesheet">
+  <title>Louvain-cident</title>
 </head>
 
 <body>
